# clip-forge

./: .gitignore  RECORDING_ARCHITECTURE.md  clip-forge-prd.md  clip-forge-task-list.md  package-lock.json  package.json  tech-overview-script.md  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/rules/: clipforge-project.mdc  nexusai-base.mdc
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  file_ops.rs  metadata.rs  mod.rs  project.rs  project_import.rs  recording.rs
src-tauri/src/ffmpeg/: export.rs  mod.rs  probe.rs  thumbnail.rs
src-tauri/src/recording/: camera.rs  mod.rs  permissions.rs  pip.rs  process_manager.rs  screen.rs  session.rs
src/contexts/: DragDropContext.tsx
src/hooks/: index.ts  useDragAndDrop.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMouseDragAndDrop.ts  useTauriFileDrop.ts  useTimelineDragAndDrop.ts  useVideoPlayback.test.ts  useVideoPlayback.ts  useWebcamRecording.test.ts  (+1 more)
tasks/: mvp-task-list.md  prd-clip-selection.md  prd-export-system.md  prd-mvp.md  prd-recording-features.md  prd-timeline-canvas-architecture.md  prd-trim-export-support.md  tasks-prd-clip-selection.md  tasks-prd-export-system.md  tasks-prd-mvp.md  tasks-prd-recording-features.md  tasks-prd-timeline-canvas-architecture.md  tasks-prd-trim-export-support.md
(+110 files in other folders)
